test/files/neg/t2206.check
t2206.scala:10: error: value f is not a member of o.A
 Note: implicit method ax is not applicable here because it comes after the application point and it lacks an explicit result type
  a.f()
    ^
one error found
